--- a/index.html
+++ b/index.html
@@ -1,53 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Eat Healthy live healthy</title>
-  </head>
-  <body link = green
-  alink = blue
-  vlink =r ed>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Shnyar Baram Muhammed">
+    <meta name="description" content="Profile of Shnyar Baram Muhammed, a 2003-born Computer Science student with a passion for hand work, Korean actors, and K-dramas.">
+    <meta name="keywords" content="Shnyar Baram Muhammed, 2003, Computer Science student, hand work, Korean actors, K-dramas">
+    <title>Profile</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
-
-
-   <h1>Khao Piyo Restaurant</h1>
-  <div class="mid">
-    <div>
-      <h2>Collect Formation for:</h2>
-      <ul style="font-weight: bold;">
-        <li>Menus</li>
-        <li>Reservation</li>
-        <li>Catering</li>
-        <li>Tours</li>
-      </ul>
-    </div>
-    <img src="./restaurant.jpg" alt="pepar">
-  </div>
-  <div class="bott">
+<body>
+    <h1>Welcome To My Profile</h1>
+    <img src="img.jpg" width="300" alt="Profile Picture">
+    <h3>Shnyar Baram Muhammed</h3>
     
-    <table>
-      <caption><h3>Menus Available</h3></caption>
-      <tr>
-        <td>1</td>
-        <td><a href="one.html">Indian</a></td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td><a href="two.html">Italian</a></td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td><a href="three.html">Continental</a></td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td><a href="four.html">Thai</a></td>
-      </tr>
-    </table>
-  </div>
-
-  <h2>For further enquieries and reservation <a href="mailto:abc@xyz.com" target="_blank">contact us</a></h2>
-  </body>
+    <ol>
+        <li><strong>List Items:</strong></li>
+        <ul>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="cv.html">CV</a></li>
+            <li><a href="korea.html">Korean Actors</a></li>
+        </ul>
+    </ol>
+</body>
 </html>
